--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
 
 .main-header {
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
 }
 
 .main-header > #main-title {
@@ -47,13 +47,13 @@ body {
 
 /* Central main */
 
-.column img {
-    height: 100px;
+.column {
+    width: calc(100% / 3);
     float: left;
 }
 
-.column {
-    width: calc(100% / 3);
+.column img {
+    height: 100px;
     float: left;
 }
 
@@ -63,16 +63,25 @@ body {
     height: 100px;
 }
 
+.photo-description h2 {
+    color: #fff;
+    font-size: 1rem;
+    padding: 5px 40px 0 10px;
+    margin-top: 8px;
+} 
+
+.photo-description .work {
+    display: inline-block;
+    color: #fff;
+    padding: 5px 40px 0 10px;
+    margin-bottom: 12px;
+}
+
 .photo-description a {
     text-decoration: none;
     color: #59CDFA;
-    padding: 5px 10px;
+    padding: 5px 40px 0 10px;
 }
-
-.photo-description h2,small {
-    color: #fff;
-    padding: 5px 10px;
-} 
 
 
 
